- up to 1.21.1 - do not register task when ostrov disabled